[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/interface/stats/bar/health_bar.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/stats/bar/health_bar_background.png" type="Texture" id=2]
[ext_resource path="res://scripts/Interface/player/bar_container.gd" type="Script" id=3]

[node name="BarContainer" type="Control" groups=["bar_container"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HealthBarBackgorund" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 28.0
texture = ExtResource( 2 )
expand = true

[node name="HealthBar" type="TextureProgress" parent="HealthBarBackgorund"]
margin_left = 22.0
margin_top = 7.0
margin_right = 81.0
margin_bottom = 10.0
max_value = 40.0
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="."]
